# DRIFT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  RELEASE_PROCESS.md  environment.yml  main.py  main_validation.py  pyproject.toml  requirements.txt  sample_config.json  test_model.xml
.github/workflows/: ci.yml  documentation.yml  release.yml
assets/: experimental_alpelisib_data.csv
docs/: api_reference.md  architecture.md  comparison_tools.md  gallery.md  modules.md  reproducibility.md  scientific_validation.md  tutorial.md  validation.md
docs/gallery/: cetuximab.md  erlotinib.md  everolimus.md  imatinib.md  palbociclib.md
drift/: __init__.py  binding.py  config.py  engine.py  metabolic.py  presets.py  signaling.py  topology.py  validation.py  visualization.py  workbench.py
drift/core/: audit.py  exceptions.py  reproducibility.py
examples/: basic_simulation.py  custom_pathway_bridge.py  drug_comparison.py  monte_carlo_analysis.py  parameter_sweep.py  quickstart_tutorial.ipynb
scripts/: generate_sample_dashboard.py  scientific_validation.py
tests/: test_analysis_fixes.py  test_audit_fixes.py  test_audit_reproducibility.py  test_config.py  test_engines.py  test_generalized_topology.py  test_headless_proxy.py  test_integration_custom.py  test_jit_topology.py  test_main.py  test_new_features.py  test_new_pareto_fixes.py  test_pareto_improvements.py  test_polypharmacology.py  test_reliability_harden.py  test_sbml_integration.py  test_scientific_rigor.py  test_simulation_engine.py  test_v030_config.py  test_v030_metabolic.py  test_v030_presets.py  test_v030_topology.py  test_visualization.py  test_workbench.py
