[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-sim"
version = "0.1.1"
authors = [
  { name="Tom Wolfe" },
]
description = "A Multi-Scale Stochastic Framework for Predicting Drug-Induced Metabolic Drift"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
maintainers = [
  { name="Tom Wolfe", email="tom.wolfe@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]
keywords = ["systems-biology", "metabolic-modeling", "fba", "stochastic-differential-equations", "drug-response", "sbml"]
dependencies = [
    "cobra",
    "optlang",
    "numpy",
    "scipy",
    "numba",
    "plotly",
    "pandas",
    "tqdm",
    "matplotlib",
    "pyarrow",
]

[project.urls]
"Homepage" = "https://github.com/tomwolfe/DRIFT"
"Bug Tracker" = "https://github.com/tomwolfe/DRIFT/issues"
"Documentation" = "https://github.com/tomwolfe/DRIFT#documentation"
"Repository" = "https://github.com/tomwolfe/DRIFT.git"

[project.optional-dependencies]
sbml = [
    "python-libsbml>=5.19.0",
    "libroadrunner>=2.1.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.8",
    "black>=21.0",
    "mypy>=0.800",
    "ipykernel",
    "jupyter",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "sphinx-autodoc-typehints>=1.12",
]

[project.scripts]
drift-sim = "main:main"

[tool.setuptools.packages.find]
include = ["drift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "-v"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["drift"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "*/__pycache__/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "cobra.*",
    "numba.*",
    "plotly.*",
    "scipy.*",
    "pandas.*",
    "tqdm.*"
]
ignore_missing_imports = true
